it's my second commit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="wb-title">All Thinks Are Possible If You believe</h1>
         <p class="wb-stitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
         by injected humour, or randomised words</p>
-        <button class="btn-primary">Contuct us</button>
+        <button class="btn-primary">Contact us</button>
     </nav>
 </header>
 <section class="about-me"> 
