--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                     <p class="footer-t phone">Phone : 01500 00 00 00</p>
                 </div>
                 <div class="footer-icons">
-                    <img src="images/icons/fb.Png" alt="facebook">
-                    <img src="images/icons/twitter.Png" alt="twitter">
-                    <img src="images/icons/youtube.Png" alt="youtube">
+                    <img src="images/icons/fb.png" alt="facebook">
+                    <img src="images/icons/twitter.png" alt="twitter">
+                    <img src="images/icons/youtube.png" alt="youtube">
                 </div>
             </div>
 
