--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 </header>
 <section class="about-me"> 
-    <img class="about-me-img" src="images/person.Png" alt="person">
+    <img class="about-me-img" src="images/person.png" alt="person">
     <div class="about-me-info">
         <h1 class="about-me-t">My failures of previous year</h1>
         <p class="about-me-st">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
@@ -40,22 +40,22 @@
             <h1 class="my-plan-btitle">My plans</h1>
             <ul class="my-plan-fe">
                 <li class="option1 opt">
-                    <img class="p-icons" src="images/icons/web.Png" alt="web development">
+                    <img class="p-icons" src="images/icons/web.png" alt="web development">
                     <h1 class="m-p-t">Web Development</h1>
                     <p class="m-p-st">I want to start</p>
                 </li>
                 <li class="option2 opt">
-                    <img class="p-icons" src="images/icons/js.Png" alt="js ">
+                    <img class="p-icons" src="images/icons/js.png" alt="js ">
                     <h1 class="m-p-t">Javascript</h1>
                     <p class="m-p-st">I want to learn</p>
                 </li>
                 <li class="option3 opt">
-                    <img class="p-icons" src="images/icons/smoke.Png" alt="smoking Habit">
+                    <img class="p-icons" src="images/icons/smoke.png" alt="smoking Habit">
                     <h1 class="m-p-t">Smoking habit</h1>
                     <p class="m-p-st">I don't have this</p>
                 </li>
                 <li class="option4 opt">
-                    <img class="p-icons" src="images/icons/ecom.Png" alt="ecommerce">
+                    <img class="p-icons" src="images/icons/ecom.png" alt="ecommerce">
                     <h1 class="m-p-t">E-commerce</h1>
                     <p class="m-p-st">I want to develop</p>
                 </li>
